-- 어드민 대시보드 DAU/MAU 집계를 위한 유저-날짜별 활동 기록 테이블
CREATE TABLE IF NOT EXISTS user_daily_activities (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    activity_date DATE NOT NULL,
    logged_in BOOLEAN NOT NULL DEFAULT FALSE,
    active BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMP,
    updated_at TIMESTAMP,
    CONSTRAINT uk_user_daily_activities_user_date UNIQUE (user_id, activity_date)
);
